[package]
name = "bigrun"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "bigrun"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "socks", "json", "rustls-tls"] }
scraper = "0.18"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tiny_http = "0.12"
aes = "0.8"
cbc = "0.1"
block-padding = "0.3"
hex = "0.4"
base64 = "0.21"
regex = "1.10"
chrono = "0.4"
pulldown-cmark = "0.9"
eframe = "0.29.1" # The new GUI engine (includes egui)
cosmic-text = "0.16.0"
image = "0.25.9"
rodio = "0.19"
